--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -16,19 +16,10 @@
 
 :root {
 	/* --hs-links: 48 100%; */
-	/* --color-foreground: hsl(0, 0%, 100%); */
-	/* --color-foreground: var(--color-white); */
 	/* --color-background: hsl(278, 73%, 19%); */
 	/* --color-links: hsl(var(--hs-links) 50%); */
 	/* --color-links-hover: hsl(var(--hs-links) 45%); */
-	/* --color-border: hsl(277, 85%, 38%); */
 	/* --color-invalid: hsl(356, 100%, 71%); */
-	/* --gradient-background: radial-gradient(
-		circle,
-		rgba(152, 11, 238, 1) 0%,
-		rgba(118, 15, 181, 1) 35%,
-		rgba(58, 13, 85, 1) 100%
-	); */
 	--color-foreground: var(--color-white);
 	--gradient-background: radial-gradient(
 		circle,
@@ -36,6 +27,11 @@
 		var(--color-gray-600) 50%,
 		var(--color-gray-900) 100%
 	);
+	--color-border: hsl(277, 85%, 38%);
+	--text-shadow: var(--color-gray-800);
+	--hs-links: 48 100%;
+	--color-links: hsl(var(--hs-links) 50%);
+	--color-links-hover: hsl(var(--hs-links) 80%);
 	/* --font-body: -apple-system, 'Segoe UI', Helvetica Neue, Helvetica, Roboto, Arial, sans-serif,
 		system-ui, 'Apple Color Emoji', 'Segoe UI Emoji'; */
 	/* --font-display: baloo, var(--font-body); */
