--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -10,50 +10,53 @@ body {
 
 .container {
   min-height: inherit;
-}
-
-.container,
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-rows: 80px 1fr 80px;
+  grid-template-areas:
+    'header'
+    'content'
+    'footer';
   align-items: center;
+  justify-items: center;
+}
+
+.header {
+  grid-area: header;
+  justify-self: end;
 }
 
 .content {
+  grid-area: content;
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
+.footer {
+  grid-area: footer;
+}
+
 h1 {
-  margin: 0;
-  text-shadow: 0 3px 0 rgba(0, 0, 0, 0.75);
+  text-shadow: 0 4px 0 var(--text-shadow);
   text-align: center;
-  line-height: 0.5;
 }
 
 h1 span {
   display: block;
   font-size: 4.5rem;
-  line-height: 1;
+  line-height: 1.3;
   text-transform: uppercase;
-  text-shadow: 0 0.2em 0.5em rgba(0, 0, 0, 0.5), 0 5px 0 rgba(0, 0, 0, 0.75);
 }
 
 nav ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  gap: 1rem;
+  color: var(--color-links);
   font-family: var(--font-display);
-  font-size: 1.125rem;
-  line-height: 1;
+  text-transform: lowercase;
 }
 
 nav ul a:hover {
-  text-decoration-style: wavy;
-  text-decoration-thickness: 1px;
+  text-decoration: none;
+  color: var(--color-links-hover);
 }
 
 @media print, (min-width: 640px) {
@@ -63,7 +66,6 @@ nav ul a:hover {
 
   nav ul {
     font-size: 1.25rem;
-    gap: 1.5rem;
   }
 }
 
