--- a/app/components/translationToggle/styles.css
+++ b/app/components/translationToggle/styles.css
@@ -1,15 +1,33 @@
 .toggleContainer {
-	/* width: max-content; */
-	/* text-align: left; */
-	/* cursor: pointer; */
+	display: flex;
+	flex-direction: row;
 }
 
-.button {
-	width: 100%;
+.toggle {
+	display: flex;
+	align-items: center;
+	background: transparent;
+	border: none;
+	width: max-content;
 	background-color: transparent;
-	padding: 5px;
+	padding: 0 5px;
+	outline: none;
 }
 
-.span {
-	/* display: inline-block;
+.toggle:focus {
+	border: none;
+}
+
+.toggle:nth-child(1) {
+	border-right: 1px solid var(--color-white);
+}
+
+.flag {
+	width: 20px;
+	margin-right: 3px;
+}
+
+.nativeName:hover {
+	color: var(--color-white);
+	cursor: pointer;
 }
