--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,40 +1,27 @@
 @import './vars.css';
 
 @font-face {
-	font-family: 'baloo';
-	src: url('/fonts/baloo/baloo.woff') format('woff');
+	font-family: 'Roboto Mono';
+	src: url('/fonts/robotoMono/robotoMono.woff2') format('woff2');
 	font-weight: normal;
 	font-style: normal;
 }
 
-/* @font-face {
-  font-family: B612;
-  src: url("/fonts/B612/B612-Reular.ttf") format("ttf");
-  font-weight: normal;
-  font-style: normal;
-} */
-
 :root {
-	/* --hs-links: 48 100%; */
-	/* --color-background: hsl(278, 73%, 19%); */
-	/* --color-links: hsl(var(--hs-links) 50%); */
-	/* --color-links-hover: hsl(var(--hs-links) 45%); */
-	/* --color-invalid: hsl(356, 100%, 71%); */
+	--font-body: -apple-system, 'Segoe UI', Helvetica Neue, Helvetica, Roboto, Arial, sans-serif,
+		system-ui, 'Apple Color Emoji', 'Segoe UI Emoji';
+	--font-display: 'Roboto Mono', var(--font-body);
 	--color-foreground: var(--color-white);
+	--color-background: var(--color-gray-900);
 	--gradient-background: radial-gradient(
 		circle,
-		var(--color-gray-400) 0%,
-		var(--color-gray-600) 50%,
+		var(--color-gray-700) 0%,
+		var(--color-gray-800) 40%,
 		var(--color-gray-900) 100%
 	);
-	--color-border: hsl(277, 85%, 38%);
-	--text-shadow: var(--color-gray-800);
-	--hs-links: 48 100%;
-	--color-links: hsl(var(--hs-links) 50%);
-	--color-links-hover: hsl(var(--hs-links) 80%);
-	/* --font-body: -apple-system, 'Segoe UI', Helvetica Neue, Helvetica, Roboto, Arial, sans-serif,
-		system-ui, 'Apple Color Emoji', 'Segoe UI Emoji'; */
-	/* --font-display: baloo, var(--font-body); */
+	--text-shadow: var(--color-black);
+	--color-links: hsl(230, 16%, 71%);
+	--color-links-hover: var(--color-white);
 	--color-black: hsl(0, 0%, 0%);
 	--color-white: hsl(0, 0%, 100%);
 	--color-blue-100: hsl(214, 100%, 95%);
@@ -54,7 +41,6 @@
 	--color-green-600: hsl(107, 65%, 57%);
 	--color-red-500: hsl(0, 100%, 64%);
 	--color-yellow-500: hsl(47, 100%, 63%);
-	--color-team-unknown: hsl(212, 6%, 54%);
 	--color-team-blue: hsl(207, 100%, 61%);
 	--color-team-red: hsl(0, 100%, 64%);
 	--color-team-yellow: hsl(50, 100%, 31%);
@@ -73,12 +59,7 @@ html {
 }
 
 :-moz-focusring {
-	outline: auto;
-}
-
-:focus {
-	outline: var(--color-links) solid 2px;
-	outline-offset: 2px;
+	outline: none;
 }
 
 html,
@@ -87,12 +68,6 @@ body {
 	margin: 0;
 	color: var(--color-foreground);
 	background-color: var(--color-background);
-}
-
-[data-light] {
-	--color-invalid: hsl(356, 70%, 39%);
-	color: var(--color-background);
-	background-color: var(--color-foreground);
 }
 
 body {
@@ -110,7 +85,6 @@ a {
 
 a:hover {
 	color: var(--color-links-hover);
-	text-decoration: underline;
 }
 
 hr {
@@ -177,6 +151,8 @@ h6 {
 	margin-right: auto;
 	margin-left: auto;
 }
+
+/* need to check under this line */
 
 /* buttons */
 
