--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -10,6 +10,7 @@ body {
 
 .container {
   min-height: inherit;
+  width: 100%;
   display: grid;
   grid-template-rows: 80px 1fr 80px;
   grid-template-areas:
@@ -21,8 +22,12 @@ body {
 }
 
 .header {
+  width: 100%;
   grid-area: header;
-  justify-self: end;
+  display: grid;
+  grid-template-columns: 1fr max-content;
+  column-gap: 30px;
+  justify-content: space-between;
 }
 
 .content {
@@ -36,7 +41,7 @@ body {
 }
 
 h1 {
-  text-shadow: 0 4px 0 var(--text-shadow);
+  text-shadow: 0 6px 0 var(--text-shadow);
   text-align: center;
 }
 
@@ -47,25 +52,9 @@ h1 span {
   text-transform: uppercase;
 }
 
-nav ul {
-  list-style: none;
-  color: var(--color-links);
-  font-family: var(--font-display);
-  text-transform: lowercase;
-}
-
-nav ul a:hover {
-  text-decoration: none;
-  color: var(--color-links-hover);
-}
-
 @media print, (min-width: 640px) {
   h1 span {
     font-size: 6rem;
-  }
-
-  nav ul {
-    font-size: 1.25rem;
   }
 }
 
