--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -8,9 +8,15 @@ body {
   background-image: var(--gradient-background);
 }
 
+main {
+  display: grid;
+  height: 100%;
+}
+
 h1 {
   text-shadow: 0 6px 0 var(--text-shadow);
   text-align: center;
+  align-self: center;
 }
 
 h1 span {
