--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -18,11 +18,13 @@
 	grid-template-columns: max-content 1fr max-content;
 	column-gap: var(--gap-xl);
 	justify-content: space-between;
+	align-items: center;
 	padding: 0 var(--gap-lg);
 }
 
 .content {
 	grid-area: content;
+	height: 100%;
 }
 
 .footer {
