--- a/app/components/headerNav/style.css
+++ b/app/components/headerNav/style.css
@@ -3,8 +3,9 @@
 	margin: 0;
 	padding: 0;
 	list-style: none;
-    font-weight: 500;
-    font-family: var(--font-display);
+	font-weight: 500;
+	font-family: var(--font-display);
+	font-size: var(--font-size-lg);
 }
 
 .linkItem {
@@ -36,8 +37,8 @@
 	transform: scaleX(1);
 }
 
-@media print, (min-width: 640px) {
+@media screen and (max-width: 1024px) {
 	.linksList {
-		font-size: 1.25rem;
+		font-size: var(--font-size-md);
 	}
 }
