--- a/app/styles/login.css
+++ b/app/styles/login.css
@@ -1,64 +1,97 @@
-/*
- * when the user visits this page, this style will apply, when they leave, it
- * will get unloaded, so don't worry so much about conflicting styles between
- * pages!
- */
-
-body {
-  background-image: var(--gradient-background);
-}
-
-.container {
-  min-height: inherit;
-}
-
-.container,
 .content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	padding: 1rem;
+	background-color: var(--color-gray-700);
+	border-radius: var(--border-radius);
+	box-shadow: 0 0 7px var(--color-blue-500);
+	width: 400px;
+  height: max-content;
 }
 
-.content {
-  padding: 1rem;
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 5px;
-  box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.5);
-  width: 400px;
-  max-width: 100%;
+.loginContainer {
+	min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr 50px;
+  row-gap: var(--gap-lg);
+  justify-items: center;
 }
 
-@media print, (min-width: 640px) {
-  .content {
-    padding: 2rem;
-    border-radius: 8px;
-  }
+.loginContent {
+	width: 100%;
 }
 
 h1 {
-  margin-top: 0;
+	margin-top: 0;
+  margin-bottom: var(--gap-lg);
+  text-align: center;
 }
 
 fieldset {
-  display: flex;
-  justify-content: center;
+	display: flex;
+	justify-content: space-evenly;
 }
 
-fieldset > :not(:last-child) {
-  margin-right: 2rem;
+.selectLabel {
+  height: 42px;
+  position: relative;
+  display: block;
+  padding: calc(var(--gap-sm) - 2px) calc(var(--gap-sm) + 2px);
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius-sm);
+	background-color: var(--input-background);
+  z-index: 10;
+}
+
+.selectLabel select {
+  border: none;
+  outline: none;
+  background: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0;
+  width: 100%;
+  font-size: 1rem;
+  color: var(--color-foreground);
+  outline: none;
+  cursor: pointer;
+}
+
+.selectLabel:after {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 100%;
+  line-height: 38px;
+  content: "∨";
+  text-align: center;
+  color: var(--color-gray-400);
+  font-size: var(--font-size-lg);
+  border-left: 1px solid var(--color-gray-400);
+  z-index: -1;
+}
+
+.links {
+  align-self: center;
+  justify-self: center;
+  margin: 0;
+  padding: 0;
 }
 
 .links ul {
-  margin-top: 1rem;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	display: flex;
+	gap: 1.5rem;
+  margin: 0;
   padding: 0;
-  list-style: none;
-  display: flex;
-  gap: 1.5rem;
-  align-items: center;
+}
+
+.links a {
+  color: var(--color-foreground);
 }
 
 .links a:hover {
-  text-decoration-style: wavy;
-  text-decoration-thickness: 1px;
+  color: var(--color-links);
 }
