--- a/app/styles/login.css
+++ b/app/styles/login.css
@@ -1,18 +1,11 @@
 .content {
 	padding: 1rem;
+  padding-bottom: 2rem;
 	background-color: var(--color-gray-700);
 	border-radius: var(--border-radius);
 	box-shadow: 0 0 7px var(--color-blue-500);
 	width: 400px;
   height: max-content;
-}
-
-.loginContainer {
-	min-height: 100%;
-  display: grid;
-  grid-template-rows: 1fr 50px;
-  row-gap: var(--gap-lg);
-  justify-items: center;
 }
 
 .loginContent {
@@ -69,29 +62,4 @@ fieldset {
   font-size: var(--font-size-lg);
   border-left: 1px solid var(--color-gray-400);
   z-index: -1;
-}
-
-.links {
-  align-self: center;
-  justify-self: center;
-  margin: 0;
-  padding: 0;
-}
-
-.links ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	display: flex;
-	gap: 1.5rem;
-  margin: 0;
-  padding: 0;
-}
-
-.links a {
-  color: var(--color-foreground);
-}
-
-.links a:hover {
-  color: var(--color-links);
 }
