--- a/app/components/logo/style.css
+++ b/app/components/logo/style.css
@@ -1,6 +1,6 @@
 .logoContainer {
-	width: 70px;
-	height: 66px;
+	width: 65px;
+	height: 65px;
 	display: grid;
 	align-items: center;
 	justify-content: center;
@@ -8,6 +8,11 @@
 	z-index: 0;
 	border-radius: 50%;
 	overflow: hidden;
+}
+
+a {
+	margin-top: calc(var(--gap-sm) - 2px);
+	height: 50px;
 }
 
 .logoContainer::before {
@@ -30,8 +35,8 @@
 	z-index: -1;
 	left: 2px;
 	top: 2px;
-	width: 66px;
-	height: 62px;
+	width: 61px;
+	height: 61px;
 	background: var(--color-background);
 	border-radius: 50%;
 }
