--- a/app/styles/game.css
+++ b/app/styles/game.css
@@ -1,85 +1,31 @@
-.games-layout {
-	display: flex;
-	flex-direction: column;
-	min-height: inherit;
+.gameContainer {
+	display: grid;
+	justify-content: center;
+	justify-items: center;
+	/* border: 1px solid red; */
 }
 
-.games-header {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-	border-bottom: 1px solid var(--color-border);
+.headerGame {
+	margin-top: calc(var(--gap-xl) * 2);
+	margin-bottom: calc(var(--gap-xl) * 1.5);
 }
 
-.games-header .container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+.form {
+	display: grid;
+	/* padding-top: 2rem; */
+	/* padding-bottom: 2rem; */
+	border: 1px solid red;
 }
 
-.games-header .home-link {
-	font-family: var(--font-display);
-	font-size: 3rem;
+.question-select {
+	border: 1px solid lawngreen;
 }
 
-.games-header .home-link a {
-	color: var(--color-foreground);
-}
-
-.games-header .home-link a:hover {
-	text-decoration: none;
-}
-
-.games-header .logo-medium {
-	display: none;
-}
-
-.games-header a:hover {
-	text-decoration-style: wavy;
-	text-decoration-thickness: 1px;
-}
-
-.games-main {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
-	flex: 1 1 100%;
-}
-
-.games-main .container {
-	display: flex;
-	gap: 1rem;
-}
-
-.games-list {
-	max-width: 12rem;
+.button {
+	margin-top: 100px;
 }
 
 .games-outlet {
 	flex: 1;
-}
-
-.games-footer {
-	padding-top: 2rem;
-	padding-bottom: 1rem;
-	border-top: 1px solid var(--color-border);
-}
-
-@media print, (min-width: 640px) {
-	.games-header .logo {
-		display: none;
-	}
-
-	.games-header .logo-medium {
-		display: block;
-	}
-
-	.games-main {
-		padding-top: 3rem;
-		padding-bottom: 3rem;
-	}
-}
-
-@media (max-width: 639px) {
-	.games-main .container {
-		flex-direction: column;
-	}
+	border: 1px solid red;
 }
